# pds

./: .ghci  LICENSE  README.md  pds.cabal  shell.nix
src/: Grammar.hs  Lambda.hs  Modeling.hs
src/Analysis/Adjectives/: Adjectives.hs  Signature.hs
src/Analysis/Factivity/: Factivity.hs  Signature.hs
src/Framework/: Grammar.hs  Lambda.hs  Target.hs
src/Framework/Grammar/: CCG.hs  Convenience.hs  Parser.hs
src/Framework/Grammar/Lexica/: SynSem.hs
src/Framework/Grammar/Lexica/SynSem/: Adjectives.hs  Convenience.hs  Factivity.hs
src/Framework/Lambda/: Convenience.hs  Delta.hs  Signature.hs  Terms.hs  Types.hs
src/Grammar/: CCG.hs
src/Grammar/Lexica/: SynSem.hs
src/Grammar/Lexica/SynSem/: Adjectives.hs  Convenience.hs  Factivity.hs
src/Lambda/: Convenience.hs  Delta.hs  Terms.hs  Types.hs
src/Modeling/: #ToStan.hs#  .#ToStan.hs  Delta.hs  ToStan.hs
src/Theory/: Delta.hs  Signature.hs
test/: Spec.hs
