cabal-version:       >=1.10
name:                pds
version:             0.1.0.0
synopsis:            Code for Probabilistic Dynamic Semantics (PDS).
description:         Transform probabilistic semantic grammar fragments based on
                     the λ-calculus into code for fitting probabilistic models
                     of human inference judgment data.
license:             MIT
license-file:        LICENSE
author:              Julian Grove and Aaron Steven White
maintainer:          julian.grove@gmail.com
copyright:           2025
build-type:          Simple

library 
  exposed-modules: Analysis.Adjectives.Adjectives
                 , Analysis.Adjectives.Signature
                 , Analysis.Factivity.Factivity
                 , Analysis.Factivity.Signature
                 , Framework.Grammar
                 , Framework.Grammar.CCG
                 , Framework.Grammar.Lexica.SynSem
                 , Framework.Grammar.Lexica.SynSem.Convenience
                 , Framework.Grammar.Parser
                 , Framework.Lambda
                 , Framework.Lambda.Convenience
                 , Framework.Lambda.Delta
                 , Framework.Lambda.Signature
                 , Framework.Lambda.Terms
                 , Framework.Lambda.Types
                 , Framework.Target
                 , Framework.Target.Stan
                 , Theory.Signature
  hs-source-dirs: src
  build-depends: base
               , containers
               , mtl
               , transformers
  default-language: Haskell2010

test-suite pds-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mtl
                     , pds
                     , hspec >= 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
